--- a/javascript-test.html
+++ b/javascript-test.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="javascript.js"></script>
 </head>
 <body>
+    <!--  -->
     <script>
         // Your JavaScript goes here!
         console.log("Hello, World!")
